--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -4,3 +4,8 @@
     <li><%= foo.name %></li>
   <% end %>
 </ul>
+
+
+<hr>
+
+<button class="btn btn-warning"> <%= link_to "New Food", new_food_path %></button>
