add food/edit.html.erb food/show.html.erb food/new.html.erb files

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -5,6 +5,13 @@
   <% end %>
 </ul>
 
+<ul>
+  <% @foods.each do |food| %>
+    <button class="btn btn-primary"><li><%= link_to food.name, food_path(food) %></li></button>
+    <br>
+  <% end %>
+</ul>
+
 
 <hr>
 
