--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -3,35 +3,16 @@
 
 <% if @food.reviews.any? %>
   <h4>Here are the reviews for this food:</h4>
-
-  <ul>
-    <% @food.reviews.five_most_recent.each do |review| %>
-        <% if review.done != true %>
-          <li><%= review.description %>
-          <button class="btn btn-success"><%= link_to "Edit", edit_food_review_path(@food, review) %></button>
+          <button class="btn btn-success"><%= link_to "Edit", edit_food_review_path(@food, review)%>
+          </button>
           <button class="btn btn-danger"><%= link_to "Delete", food_review_path(@food, review),
-                                   :data => {:confirm => "Are you sure?",
-                                                    :method => "delete"} %></button>
-        <% end %>
-
-
-        <% if review.done === true %>
-        <li class="strikeThrough">Done <%= review.description %>
-          <button class="btn btn-success"><%= link_to "Edit", edit_food_review_path(@food, review) %></button>
-          <button class="btn btn-danger"><%= link_to "Delete", food_review_path(@food, review),
-                                   :data => {:confirm => "Are you sure?",
-                                                    :method => "delete"} %></button>
+                                                            :data => {:confirm => "Are you sure?",
+                                                            :method => "delete"} %>
+          </button>
         <% end %>
       </li>
     <% end %>
   </ul>
-<% else %>
-  <p>There are no reviews yet!</p>
-<% end %>
 
-<button class="btn btn-success"><p><%= link_to "Add a review", new_food_review_path(@food) %></p></button>
-<button class="btn btn-danger"><p><%= link_to "Delete Food", food_path(@food),
-                        :data => {:confirm => "Are you sure?",
-                                       :method => "delete"} %></p></button>
 
 <button class="btn btn-info"><p><%= link_to "Return to foods", foods_path %></p></button>
