--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -2,14 +2,25 @@
 <h1><%= @food.name %></h1>
 
 <% if @food.reviews.any? %>
-  <h4>Here are the reviews for this food:</h4>
-          <button class="btn btn-success"><%= link_to "Edit", edit_food_review_path(@food, review)%>
-          </button>
+  <h3>Here are the reviews for this food:</h4>
+      <ul>
+        <% @food.reviews.each do |review| %>
+          <li><%= review.description %>
+          <button class="btn btn-success"><%= link_to "Edit", edit_food_review_path(@food, review) %></button>
           <button class="btn btn-danger"><%= link_to "Delete", food_review_path(@food, review),
-                                                            :data => {:confirm => "Are you sure?",
-                                                            :method => "delete"} %>
-          </button>
+                                   :data => {:confirm => "Are you sure?",
+                                                    :method => "delete"} %></button>
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+    <p>There are no reviews yet!</p>
 <% end %>
+
+<p><%= link_to "Leave a Review", new_food_review_path(@food) %></p>
+<p><%= link_to "Delete List", food_path(@food),
+                        :data => {:confirm => "Are you sure?",
+                                       :method => "delete"} %></p>
 
 
 <button class="btn btn-info"><p><%= link_to "Return to foods", foods_path %></p></button>
