store review ratings,featured values

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,4 +1,4 @@
 <% content_for(:title, "Task-Edit") %>
-<h1>Edit -- <%= @food.name %>'s -- <%= @review.description %> -- task </h1>
+<h1>Edit -- <%= @food.name %>'s -- <%= @review.description %> -- task ---  <%= @review.user_rating %> ---rating <%= @review.user%></h1>
 
 <%= render 'form' %>
