--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -6,6 +6,10 @@
       <ul>
         <% @food.reviews.each do |review| %>
           <li><%= review.description %>
+          <li><%= review.user_rating %>
+          <%= review.featured %>
+          <%= review.user %>
+
           <button class="btn btn-success"><%= link_to "Edit", edit_food_review_path(@food, review) %></button>
           <button class="btn btn-danger"><%= link_to "Delete", food_review_path(@food, review),
                                    :data => {:confirm => "Are you sure?",
