--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -2,10 +2,12 @@
 
 <%= form_for [@food, @review] do |f| %>
   <%= f.label :description %>
-  <%= f.text_field :description %>
+  <%= f.text_field :description%>
+  <%= f.label :user_rating %>
+  <%= f.select :user_rating, options_for_select([["Pick A Rating", ""], ["★ ", 1], ["★★", 2], ["★★★",3],  ["★★★★",4],  ["★★★★★", 5]]), :class => 'form_dropBox' %>
   <% if !@review.description.nil? %>
-    <%= f.label :done%>
-    <%= f.check_box :done %>
+    <%= f.label :feature? %>
+    <%= f.check_box :featured %>
   <% end %>
   <p><%= f.submit %></p>
 <% end %>
