display add food option if user is signed in

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,17 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+     <h3><%= link_to 'Add Food Item', new_food_path %></h3>
+     <h3><%= link_to 'Account', edit_user_registration_path %></h3>
+     <h3><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></h3>
+
+   <% else %>
+     <h3><%= link_to 'Sign up', new_user_registration_path%></h3>
+     <h3><%= link_to 'Sign in', new_user_session_path %></h3>
+
+   <% end %>
+
     <%= yield %>
     <%= flash[:alert] %>
     <%= flash[:notice] %>
