--- a/app/views/foods/show.html.erb
+++ b/app/views/foods/show.html.erb
@@ -11,10 +11,14 @@
               <hr>
               <%= review.featured %>
               <%= review.user %>
-              <button class="btn btn-success"><%= link_to "Edit", edit_food_review_path(@food, review) %></button>
-              <button class="btn btn-danger"><%= link_to "Delete", food_review_path(@food, review),
-                                       :data => {:confirm => "Are you sure?",
-                                                        :method => "delete"} %></button>
+              <% if @food.user == current_user %>
+                <button class="btn btn-success"><%= link_to "Edit", edit_food_review_path(@food, review) %></button>
+
+                <button class="btn btn-danger"><%= link_to "Delete", food_review_path(@food, review),
+                                        :data => {:confirm => "Are you sure?",
+                                                            :method => "delete"} %></button>
+             <% end %>
+      
           </div>
         <% end %>
     <% else %>
