--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -3,12 +3,15 @@
 
 <div class="card">
     <% @foods.each do |food| %>
-    <button class="btn btn-info"><li><%= link_to food.name, food_path(food) %></li></button>
-    <br>
+
+    <h3 class="btn-info"><%= link_to food.name, food_path(food) %></h3>
+  
+    <% if food.user == current_user %>
+        <h5><%= link_to 'Edit', edit_food_path(food) %></h5>
+        <h5><%= link_to 'Destroy', food, method: :delete, data: { confirm: 'Are you sure?' } %></h5>
+        <% end %>
+        <hr>
     <% end %>
 </div>
 
 <hr>
-<div class="return">
-    <button class="btn btn-warning"> <%= link_to "New Food", new_food_path %></button>
-</div>
