add a pre-config bootstrapped header. Update Notice messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,9 +25,13 @@ li {
 h1 {
     text-align: center;
 }
+h2 {
+    text-align: center;
+}
  h3 {
      text-align: center;
  }
+ 
  .return {
      background-color: lightgreen;
      outline-style: dotted;
@@ -36,3 +40,14 @@ h1 {
      margin-bottom: 200px;
 
  }
+
+.actions {
+    text-align: center;
+}
+
+.field {
+    text-align: center;
+}
+.center {
+    text-align: center;
+}
