--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -1,7 +1,24 @@
 <%= render "layouts/errors", :object => @food %>
 
 <%= form_for @food do |f| %>
+
+<div class="formField">
   <%= f.label :name %>
   <%= f.text_field :name %>
+</div>
+
+<div class="formField">
+  <%= f.label :price %>
+  <%= f.select :price, options_for_select([["Pick A Price", ""], ["$ ", 1], ["$$", 2], ["$$$",3],  ["$$$$",4],  ["$$$$$", 5]]), :class => 'form_dropBox' %> 
+</div>
+
+<div class="formField">
+  <%= f.label :location %>
+  <%= f.select :location, options_for_select([["Where is the food grown?", ""], ["USA", "United States"], ["Mexico", "Mexico"]]), :class => 'form_dropBox' %> 
+</div>
   <%= f.submit %>
+  <div class="field">
+    <%= f.label :image %>
+    <%= f.file_field :image %>
+</div>
 <% end %>
