add my plane turbulence css save

--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -9,7 +9,7 @@
         <p>
             <strong>Image:</strong>
             <br>
-            <%= image_tag food.image %>
+            <%= image_tag food.image, class: "picture"  %>
         </p>
     <%end%>
     <% end %>
@@ -18,11 +18,7 @@
     <% @foods.each do |food| %>
     <h3 class="btn-info"><%= link_to food.name, food_path(food) %></h3>
     <% if food.image.attached? %>
-        <p>
-            <strong>Image:</strong>
-            <br>
-            <%= image_tag food.image %>
-        </p>
+        <p><strong>Image:</strong><br><%= image_tag food.image, class: "picture"  %></p>
     <%end%>
     <% if food.location %>
         <p><strong>From: <%= food.location %></strong></p>
