revmove comment - user relation

--- a/app/views/layouts/_form.html.erb
+++ b/app/views/layouts/_form.html.erb
@@ -14,7 +14,7 @@
 
 <div class="formField">
   <%= f.label :location %>
-  <%= f.select :location, options_for_select([["Where is the food grown?", ""], ["USA", "United States"], ["Mexico", "Mexico"]]), :class => 'form_dropBox' %> 
+  <%= f.select :location, options_for_select([["Where is the food grown?", ""], ["USA", "United States"], ["Mexico", "Mexico"],["Mauritania","I Don't remember"]]), :class => 'form_dropBox' %> 
 </div>
   <%= f.submit %>
   <div class="field">
